<resources>
    <string name="app_name">Mareu</string>
    <string name="th_me_de_la_r_union">Thème de la réunion</string>
    <string name="organisateur">Organisateur</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="salle_n">Salle n°</string>
    <string name="email_participant_fr">email@participant.fr</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="afficher_les_r_unions_de_la_salle">Afficher les réunions de la salle :</string>
    <string name="annuler">ANNULER</string>
    <string name="ok">OK</string>
    <string name="add_meeting">Add meeting</string>
    <string name="delete_meeting">Delete meeting</string>
    <string name="Veuillez_saisir_une_adresse_mail_valide">Veuillez saisir une adresse mail valide.</string>
    <string name="Veuillez_saisir_un_sujet">Veuillez saisir un sujet.</string>
    <string name="Veuillez_saisir_votre_nom_dans_le_champ_organisateur">Veuillez saisir votre nom dans le champ organisateur.</string>
    <string name="Veuillez_choisir_une_date_valide">Veuillez choisir une date valide.</string>
...
